--- a/index.html
+++ b/index.html
@@ -9,32 +9,35 @@
 </head>
 
 <body>
-<div class="container">
-    <div class="quiz-box">
-        <div id="quiz">
-            <h1>Quiz App</h1>
-            <div class="quiz-header"></div>
-            <p id="progress">Question x of y</p>
-            <p id="count-down">10</p>
-        </div>
-        <p id="question">What does CSS stand for?</p>
+    <div class="container">
+        <div class="quiz-box">
+            <div id="quiz">
+                <h1>Quiz App</h1>
+                <div class="quiz-header">
+                    <p id="progress">Question x of y</p>
+                    <div id="timerDisplay"></div>
+                    <button id="incorrect">Simulate Incorrect Answer</button>
+            </div>
+            <p id="question"></p>
 
-        <div class="buttons">
-            <button class="btn" id="btn0">A. <span id="choice0">
-                 </span>
-        </button>
-            <button class="btn" id="btn0">B. <span id="choice1">
-            </span>
-        </button>
-            <button class="btn" id="btn0">C. <span id="choice2">
-            </span>
-        </button>
-            <button class="btn" id="btn0">D. <span id="choice3">
-            </span>
-            </button>
+                <div class="buttons">
+                    <button class="btn" id="btn0">
+                        A. <span id="choice0"></span>
+                    </button>
+                    <button class="btn" id="btn1">
+                        B. <span id="choice1"></span>
+                    </button>
+                    <button class="btn" id="btn2">
+                        C. <span id="choice2"></span>
+                    </button>
+                    <button class="btn" id="btn3">
+                        D. <span id="choice3"></span>
+                    </button>
+                </div>
+            </div>
         </div>
     </div>
-</div>
-   <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
